src/test/deca/codegen/invalid/objet/Error/DivFloat0Class.deca
// Erreur : division par zero impossible
// Description : Division 0 en flottant
// Resultat : erreur lors de ima


class A{
    float x = 1.0;
    float y = 0.0;
   
    void Test(){
        float z = x/y;
    }
}
{
    A a = new A();
    a.Test();
}
